[package]
name = "httpho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4"
anyhow = "1.0"
awc = "3.0"
config = "0.13"
clap = { version = "3.1", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
